# CodexMonitor

./: .gitignore  CLAUDE_INTEGRATION_POC.md  README.md  RELEASING.md  build.sh  codexmonitor-integration.patch  package-lock.json  package.json  run-dev.sh
claude-app-server/: Cargo.toml  README.md  test_server.sh
claude-app-server/examples/: interactive.rs
claude-app-server/src/: claude.rs  main.rs  protocol.rs  tools.rs
claude-app-server/tests/: integration_test.rs
pi-adapter/: package-lock.json  package.json
pi-adapter/src/: index.ts
src/: App.tsx  types.ts
src-tauri/: tauri.conf.json
src-tauri/src/: codex.rs  git.rs  lib.rs  settings.rs  state.rs  storage.rs  types.rs  workspaces.rs
src-tauri/src/backend/: mod.rs  pi_adapter.rs
src/components/: CodeBlock.tsx  Composer.tsx  ComposerMetaBar.tsx  ComposerQueue.tsx  GitDiffPanel.tsx  GitDiffViewer.tsx  Home.tsx  Messages.tsx  SettingsView.tsx  Sidebar.tsx  ToolPreviewPanel.tsx  TurnDiffPanel.tsx
src/features/composer/components/: ComposerMetaBar.tsx
src/features/messages/components/: Messages.tsx
src/features/settings/components/: SettingsView.tsx
src/hooks/: useAppServerEvents.ts  useGitHubIssues.ts  useGitLog.ts  useModels.ts  useThreads.ts  useThreadsReducer.ts  useUpdater.ts  useWorkspaces.ts
src/services/: tauri.ts
src/styles/: code-block.css  composer.css  diff-viewer.css  home.css  main.css  messages.css  settings.css  sidebar.css  tool-preview.css  turn-diff.css
