[package]
name = "claude-app-server"
version = "0.1.0"
edition = "2021"
description = "A Claude-compatible app server implementing the Codex app-server JSON-RPC protocol"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
